# ofxGgmlRag

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HERMES.md  README.md  addon_config.mk  ofxggml-addon.json
.github/: copilot-instructions.md
.github/instructions/: ofxggml-ecosystem.instructions.md
docs/: ARCHITECTURE.md  GETTING_STARTED.md  RAG_WORKFLOWS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_POLICY.md  ROADMAP.md
docs/releases/: v1.0.1.md  v1.1.0-draft.md
ofxGgmlRagSearchExample/: README.md  addons.make  config.make
ofxGgmlRagSearchExample/src/: main.cpp  ofApp.cpp  ofApp.h
scripts/: doctor-rag.bat  doctor-rag.ps1  doctor-rag.sh  release-candidate.ps1  run-rag-runtime-smoke.bat  run-rag-runtime-smoke.ps1  run-rag-runtime-smoke.sh  test-addon.ps1  test-doctor-rag.ps1  test-rag-runtime-smoke.ps1  validate-local.ps1
src/: ofxGgmlRag.h  ofxGgmlRagVersion.h
src/ofxGgmlRag/: ofxGgmlRag.cpp  ofxGgmlRagTypes.h  ofxGgmlRagUtils.cpp  ofxGgmlRagUtils.h
tests/: CMakeLists.txt  test_main.cpp
